// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hiking explode the ghosts on the sun 1`] = `
"On the bridge
At the top of the bridge is a spaceship. It looks like a Sun Ship. The hatch is open, and it looks pretty functional.

You're on the bridge, and can look down at the lake. This lake is beautiful. From up here, the lake seems to have a less grim appearance.

The enemies that were in the lake have been defeated! Their defeated corpses float in the water.

SHIP - Enter the ship
LAKE - Go back down to the lake
FINISH_LINE - From up here on the bridge, you can see the finish line of this entire game!"
`;

exports[`hiking explode the ghosts on the sun 2`] = `
"Sun Ship, on Earth
Pretty nice in here. Whatever alien species created this ship did a good job.

The controls here look pretty simple. There's just one big button that says \\"PUSH_ME\\"

PUSH_ME - Push the control button
EXIT - Jump out of the ship and back to the bridge"
`;

exports[`hiking explode the ghosts on the sun 3`] = `
"You close your eyes, hold your breath, and slam your hand on the PUSH_ME button. The ship's engine's rumble and your insides suddenly feel like cooked noodles as the ship rises up into the sky, and KSHOOOOM! into space!

The Sun, in the Sun Ship
It's so hot on the Sun! Fear not, it's safe inside the sun ship. It's very bright, but the windows of the sunship make it safe to look at.

BACK - Go back to Earth
LOOK - Look at the sun (through the safety of the sunship windows)
THROW_YOGURT - Throw the ghost yogurt onto the sun"
`;

exports[`hiking explode the ghosts on the sun 4`] = `
"There's not much to say about the sun at the moment. It's plain, like plain yogurt.

The Sun, in the Sun Ship
It's so hot on the Sun! Fear not, it's safe inside the sun ship. It's very bright, but the windows of the sunship make it safe to look at.

BACK - Go back to Earth
LOOK - Look at the sun (through the safety of the sunship windows)
THROW_YOGURT - Throw the ghost yogurt onto the sun"
`;

exports[`hiking explode the ghosts on the sun 5`] = `
"You reach for the ghost yogurt in your pocket, open the hatch of the sunship, and with all your strength, you mightily hurl the yogurt onto the surface of the sun.

The yogurt quickly melts, releasing the dreadful ghosts. The ghosts begin to moan and start turning into smoke.

One of the ghosts looks at you and says, \\"Thank you for releasing us! Our sprits are free now, and we can join our ancestors in ghost heaven.\\"

Then all of the ghosts explode

GAIN 20 POINTS

BACK - Go back to Earth
LOOK - Look at the sun (through the safety of the sunship windows)"
`;

exports[`hiking explode the ghosts on the sun 6`] = `
"On the surface of the sun, there is melted yogurt and the remains of exploded ghosts.

The Sun, in the Sun Ship
It's so hot on the Sun! Fear not, it's safe inside the sun ship. It's very bright, but the windows of the sunship make it safe to look at.

BACK - Go back to Earth
LOOK - Look at the sun (through the safety of the sunship windows)"
`;

exports[`hiking explode the ghosts on the sun 7`] = `
"KSHOOOOM!! Back down to Earth you go in the sun ship. Hope you enjoyed your stay on the sun! Come back soon!

Sun Ship, on Earth
Pretty nice in here. Whatever alien species created this ship did a good job.

The controls here look pretty simple. There's just one big button that says \\"PUSH_ME\\"

PUSH_ME - Push the control button
EXIT - Jump out of the ship and back to the bridge"
`;

exports[`hiking explode the ghosts on the sun 8`] = `
"Hope you enjoyed your time on the sun ship. Come back again anytime you want to be in a sun ship!

On the bridge
At the top of the bridge is a spaceship. It looks like a Sun Ship. The hatch is open, and it looks pretty functional.

You're on the bridge, and can look down at the lake. This lake is beautiful. From up here, the lake seems to have a less grim appearance.

The enemies that were in the lake have been defeated! Their defeated corpses float in the water.

SHIP - Enter the ship
LAKE - Go back down to the lake
FINISH_LINE - From up here on the bridge, you can see the finish line of this entire game!"
`;

exports[`hiking explore sun 1`] = `
"Escaping from the cops station
You've just escaped from a jail. You breathe a sigh of relief because that part of your life is forever behind you. They'll never find you in these woods. Plus, you stole the jail key, because you're not a bad guy. You were put in jail accidentally. They made you steal the key.

Now, all you have to do is hike...

You're surrounded by trees and it's cloudy outside. To be honest, it's a little scary because you really don't know what's out here. And there's cops chasing you, but they're far behind. And you can go super fast.

LAKE - You can see a lake in one direction. It looks pretty nice.
ROCKS - You can see precarious rocks on the trail in another direction. They look scrambly.
LOOK - Look at the area you are currently in.
ITEMS - Things you can do with stuff you are holding or stuff you see.
HELP - See all the commands you can type
QUIT - Quit the game"
`;

exports[`hiking explore sun 2`] = `
"Your hiking adventure begins! Off to the lake we go.

Lake
This lake is beautiful, but the cloudy sky gives it a grim appearance. This seems to be a place of battle.

There are enemies are in the lake. The shores of the lake are too far away from them to do anything about them, though

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking explore sun 3`] = `
"On the bridge
At the top of the bridge is a spaceship. It looks like a Sun Ship. The hatch is open, and it looks pretty functional.

You're on the bridge, and can look down at the lake. This lake is beautiful. From up here, the lake seems to have a less grim appearance.

There are enemies in the lake. At top of this bridge, it is too high up to do anything about it though.

SHIP - Enter the ship
LAKE - Go back down to the lake
FINISH_LINE - From up here on the bridge, you can see the finish line of this entire game!"
`;

exports[`hiking explore sun 4`] = `
"Sun Ship, on Earth
Pretty nice in here. Whatever alien species created this ship did a good job.

The controls here look pretty simple. There's just one big button that says \\"PUSH_ME\\"

PUSH_ME - Push the control button
EXIT - Jump out of the ship and back to the bridge"
`;

exports[`hiking explore sun 5`] = `
"You close your eyes, hold your breath, and slam your hand on the PUSH_ME button. The ship's engine's rumble and your insides suddenly feel like cooked noodles as the ship rises up into the sky, and KSHOOOOM! into space!

The Sun, in the Sun Ship
It's so hot on the Sun! Fear not, it's safe inside the sun ship. It's very bright, but the windows of the sunship make it safe to look at.

BACK - Go back to Earth
LOOK - Look at the sun (through the safety of the sunship windows)"
`;

exports[`hiking explore sun 6`] = `
"There's not much to say about the sun at the moment. It's plain, like plain yogurt.

The Sun, in the Sun Ship
It's so hot on the Sun! Fear not, it's safe inside the sun ship. It's very bright, but the windows of the sunship make it safe to look at.

BACK - Go back to Earth
LOOK - Look at the sun (through the safety of the sunship windows)"
`;

exports[`hiking explore sun 7`] = `
"KSHOOOOM!! Back down to Earth you go in the sun ship. Hope you enjoyed your stay on the sun! Come back soon!

Sun Ship, on Earth
Pretty nice in here. Whatever alien species created this ship did a good job.

The controls here look pretty simple. There's just one big button that says \\"PUSH_ME\\"

PUSH_ME - Push the control button
EXIT - Jump out of the ship and back to the bridge"
`;

exports[`hiking explore sun 8`] = `
"Hope you enjoyed your time on the sun ship. Come back again anytime you want to be in a sun ship!

On the bridge
At the top of the bridge is a spaceship. It looks like a Sun Ship. The hatch is open, and it looks pretty functional.

You're on the bridge, and can look down at the lake. This lake is beautiful. From up here, the lake seems to have a less grim appearance.

There are enemies in the lake. At top of this bridge, it is too high up to do anything about it though.

SHIP - Enter the ship
LAKE - Go back down to the lake
FINISH_LINE - From up here on the bridge, you can see the finish line of this entire game!"
`;

exports[`hiking explore sun 9`] = `
"I guess you don't want to hike any more. See ya!

Looks like you're a winner! Turns: 7 Score: 50
That was fun, Tim!"
`;

exports[`hiking finish the game 1`] = `
"Leaving so soon?

Finish Line
The finish line looks like a robot. You can ask the robot to take out a flag, and that will finish this hiking game.

Ready to end the hiking journey?

ASK_THE_ROBOT_TO_TAKE_OUT_A_FLAG - Leave the hiking journey and save your points
BRIDGE - Go back to the bridge, and keep playing the hiking game"
`;

exports[`hiking finish the game 2`] = `
"The robot takes out a flag, and swishes it over your head. This takes you to the end of the hiking journey.

Looks like you're a winner! Turns: 45 Score: 119
That was fun, Tim!"
`;

exports[`hiking fly a car back to the lake 1`] = `
"You have dodged all the magical spray from the water, and are quite dry. You are not feeling magical.

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking fly a car back to the lake 2`] = `
"You jump around in the waterfall spray for a bit. It feels so magical! The magical wetness covers you and leaves you soaked! You feel magically powerful!

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking fly a car back to the lake 3`] = `
"With the magical strength gained from the waterfall spray, you climb up the very tall mountain.

Top of the mountain
It was a long climb up to the really tall top of this mountain, so it feels so good to be up here.

Nearby is a blue house with a green roof. It has a lot of windows and only one door that is open. There is smoke coming out of the chimney.

There is an item here you may be interested in:
Bubble Gun - It's a bubble gun for gunning out bubbles. It looks very interesting.
 - TAKE_BUBBLE_GUN - Pick up interesting looking bubble gun.

WATERFALL - To go back down to the waterfall
HOUSE - Check out the mountain house up here."
`;

exports[`hiking fly a car back to the lake 4`] = `
"Top of the mountain
It was a long climb up to the really tall top of this mountain, so it feels so good to be up here.

Nearby is a blue house with a green roof. It has a lot of windows and only one door that is open. There is smoke coming out of the chimney.

There is an item here you may be interested in:
Bubble Gun - It's a bubble gun for gunning out bubbles. It looks very interesting.
 - TAKE_BUBBLE_GUN - Pick up interesting looking bubble gun.

WATERFALL - To go back down to the waterfall
HOUSE - Check out the mountain house up here."
`;

exports[`hiking fly a car back to the lake 5`] = `
"The bubble gun is now yours.

WATERFALL - To go back down to the waterfall
HOUSE - Check out the mountain house up here."
`;

exports[`hiking fly a car back to the lake 6`] = `
"Mountain House
Inside the mountain house, the many windows create an atmosphere of light, but as it is cloudy outside, you find yourself wishing for a little more.

There's a comfy-looking bed, in case you need a rest.

There's a deep hole in the floor. You can't see the bottom, but you could fit yourself inside.

OUTSIDE - Go out to the top of the mountain
DOWN_THE_HOLE - Take a look at what's down the hole
SLEEP - Take a rest on the comfy-looking bed"
`;

exports[`hiking fly a car back to the lake 7`] = `
"You lay down on the comfy bed and close your eyes. You let your mind wander. Thinking about how pretty the waterfall was, you realize that although you were scared initially you're feeling pretty good now. You think to yourself that this game is pretty awesome, even though it doesn't have a lot of pictures and it's mostly reading.

GAIN A POINT

You learn some things:
- Your score is 64
- You've taken 26 turns

Stuff you are holding:
- Apples: 100 red apples.
- Yogurt: This yogurt is haunted with ghosts. They look like they want to get out.
- Bubble Gun: It's a bubble gun for gunning out bubbles. It looks very interesting.

OUTSIDE - Go out to the top of the mountain
DOWN_THE_HOLE - Take a look at what's down the hole
SLEEP - Take a rest on the comfy-looking bed"
`;

exports[`hiking fly a car back to the lake 8`] = `
"Fortunately, there's a ladder leading straight down the hole, so you don't have to jump down an unknown distance through complete darkness.

Under the Mountain House
The bottom of the hole is so deep, you'd have to use a ladder to get back up.

There's a silver car here, at the start of a long tunnel into darkness. The car is floating slightly, but it seems pretty easy to get in if you want.

There is an item here you may be interested in:
Flying silver car - This car does not have wheels, instead it has flyers on the bottom that point at the ground and lift it up, making it go really fast. It is created inside the tall mountain.

LADDER - Climb the ladder to get back up to the house
DRIVE_THE_CAR - Get into the car and drive it, to see what's down this tunnel"
`;

exports[`hiking fly a car back to the lake 9`] = `
"Climb, climb, climb.

Mountain House
Inside the mountain house, the many windows create an atmosphere of light, but as it is cloudy outside, you find yourself wishing for a little more.

There's a comfy-looking bed, in case you need a rest.

There's a deep hole in the floor. You can't see the bottom, but you could fit yourself inside.

OUTSIDE - Go out to the top of the mountain
DOWN_THE_HOLE - Take a look at what's down the hole
SLEEP - Take a rest on the comfy-looking bed"
`;

exports[`hiking fly a car back to the lake 10`] = `
"You lay down on the comfy bed and close your eyes. You let your mind wander. Thinking about how pretty the waterfall was, you realize that although you were scared initially you're feeling pretty good now. You think to yourself that this game is pretty awesome, even though it doesn't have a lot of pictures and it's mostly reading.

GAIN A POINT

You learn some things:
- Your score is 64
- You've taken 29 turns

Stuff you are holding:
- Apples: 100 red apples.
- Yogurt: This yogurt is haunted with ghosts. They look like they want to get out.
- Bubble Gun: It's a bubble gun for gunning out bubbles. It looks very interesting.

OUTSIDE - Go out to the top of the mountain
DOWN_THE_HOLE - Take a look at what's down the hole
SLEEP - Take a rest on the comfy-looking bed"
`;

exports[`hiking fly a car back to the lake 11`] = `
"Fortunately, there's a ladder leading straight down the hole, so you don't have to jump down an unknown distance through complete darkness.

Under the Mountain House
The bottom of the hole is so deep, you'd have to use a ladder to get back up.

There's a silver car here, at the start of a long tunnel into darkness. The car is floating slightly, but it seems pretty easy to get in if you want.

There is an item here you may be interested in:
Flying silver car - This car does not have wheels, instead it has flyers on the bottom that point at the ground and lift it up, making it go really fast. It is created inside the tall mountain.

LADDER - Climb the ladder to get back up to the house
DRIVE_THE_CAR - Get into the car and drive it, to see what's down this tunnel"
`;

exports[`hiking fly a car back to the lake 12`] = `
"Under the Mountain House
The bottom of the hole is so deep, you'd have to use a ladder to get back up.

There's a silver car here, at the start of a long tunnel into darkness. The car is floating slightly, but it seems pretty easy to get in if you want.

There is an item here you may be interested in:
Flying silver car - This car does not have wheels, instead it has flyers on the bottom that point at the ground and lift it up, making it go really fast. It is created inside the tall mountain.

LADDER - Climb the ladder to get back up to the house
DRIVE_THE_CAR - Get into the car and drive it, to see what's down this tunnel"
`;

exports[`hiking fly a car back to the lake 13`] = `
"You hop in the car and buckle in. As you put your hands on the steering wheel, the car floats up higher and takes off down the dark tunnel! You zoom and zoom through it as the light of the outside comes closer and closer. There is a tremendous WHOOOOSH!! sound as the car flies out of the side of the mountain! You're now flying over the lake that you passed by on the beginning of this hiking journey.

Lake
This lake is beautiful, but the cloudy sky gives it a grim appearance. This seems to be a place of battle.

There are enemies are in the lake. You're floating over their heads in your flying car.

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake
THROW_APPLES - Throw the apples at the enemies"
`;

exports[`hiking fly a car back to the lake 14`] = `
"On the bridge
At the top of the bridge is a spaceship. It looks like a Sun Ship. The hatch is open, and it looks pretty functional.

You're on the bridge, and can look down at the lake. This lake is beautiful. From up here, the lake seems to have a less grim appearance.

There are enemies in the lake. At top of this bridge, it is too high up to do anything about it though.

SHIP - Enter the ship
LAKE - Go back down to the lake
FINISH_LINE - From up here on the bridge, you can see the finish line of this entire game!"
`;

exports[`hiking fly a car back to the lake 15`] = `
"Down, down, down you go. Down the bridge, bridge, bridge to the lake, lake, lake.

Lake
This lake is beautiful, but the cloudy sky gives it a grim appearance. This seems to be a place of battle.

There are enemies are in the lake. You're floating over their heads in your flying car.

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake
THROW_APPLES - Throw the apples at the enemies"
`;

exports[`hiking fly a car back to the lake 16`] = `
"You reach for an apple in your pocket, and give it a mighty hurl. It knocks an enemy head! That enemy becomes defeated!

You continue on in this manner until all enemies are defeated. Their corpses float amidst apples in the water of the lake.

GAIN 35 points

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking get sprayed at the waterfall 1`] = `
"Escaping from the cops station
You've just escaped from a jail. You breathe a sigh of relief because that part of your life is forever behind you. They'll never find you in these woods. Plus, you stole the jail key, because you're not a bad guy. You were put in jail accidentally. They made you steal the key.

Now, all you have to do is hike...

You're surrounded by trees and it's cloudy outside. To be honest, it's a little scary because you really don't know what's out here. And there's cops chasing you, but they're far behind. And you can go super fast.

LAKE - You can see a lake in one direction. It looks pretty nice.
ROCKS - You can see precarious rocks on the trail in another direction. They look scrambly.
LOOK - Look at the area you are currently in.
ITEMS - Things you can do with stuff you are holding or stuff you see.
HELP - See all the commands you can type
QUIT - Quit the game"
`;

exports[`hiking get sprayed at the waterfall 2`] = `
"Your hiking adventure begins! Off to the lake we go.

Lake
This lake is beautiful, but the cloudy sky gives it a grim appearance. This seems to be a place of battle.

There are enemies are in the lake. The shores of the lake are too far away from them to do anything about them, though

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking get sprayed at the waterfall 3`] = `
"Rocky place
There's rocks here. Be careful! You could trip, or if you horseplay, a rock could fall on your head.

If you are careful, you could cross the rocks to get to a waterfall.

LAKE - Go to the lake
WATERFALL - Check it out, you can see a waterfall beyond the rocks"
`;

exports[`hiking get sprayed at the waterfall 4`] = `
"You're a careful sort of person, so you can easily get over the treacherous rocks to go where you want to go.

Really giant waterfall
It is so magical here.

This waterfall is at the bottom of a giant mountain and a bunch of trees. There's a path up the mountain, and you can try to see the top of the mountain, but it's so tall that it hurts your neck to look at it.

There's a climbing rope that leads to a really big circle. You're not sure what it is, and you don't feel strong enough to climb up right now.

There's water spraying everywhere!

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking get sprayed at the waterfall 5`] = `
"You have dodged all the magical spray from the water, and are quite dry. You are not feeling magical.

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking get sprayed at the waterfall 6`] = `
"You try to climb the rope up to the giant circle, but you're too weak right now!

LOSE A POINT

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking get sprayed at the waterfall 7`] = `
"You try to hike the trail going straight up the really tall mountain, but you're too weak right now!

LOSE A POINT

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking get sprayed at the waterfall 8`] = `
"You jump around in the waterfall spray for a bit. It feels so magical! The magical wetness covers you and leaves you soaked! You feel magically powerful!

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking get sprayed at the waterfall 9`] = `
"You have recently been sprayed by some of the magical droplets of the waterfall. You feel magically powerful!

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking help 1`] = `
"Escaping from the cops station
You've just escaped from a jail. You breathe a sigh of relief because that part of your life is forever behind you. They'll never find you in these woods. Plus, you stole the jail key, because you're not a bad guy. You were put in jail accidentally. They made you steal the key.

Now, all you have to do is hike...

You're surrounded by trees and it's cloudy outside. To be honest, it's a little scary because you really don't know what's out here. And there's cops chasing you, but they're far behind. And you can go super fast.

LAKE - You can see a lake in one direction. It looks pretty nice.
ROCKS - You can see precarious rocks on the trail in another direction. They look scrambly.
LOOK - Look at the area you are currently in.
ITEMS - Things you can do with stuff you are holding or stuff you see.
HELP - See all the commands you can type
QUIT - Quit the game"
`;

exports[`hiking help 2`] = `
"LAKE - You can see a lake in one direction. It looks pretty nice.
ROCKS - You can see precarious rocks on the trail in another direction. They look scrambly.
LOOK - Look at the area you are currently in.
ITEMS - Things you can do with stuff you are holding or stuff you see.
HELP - See all the commands you can type
QUIT - Quit the game"
`;

exports[`hiking help 3`] = `
"ERROR! LOSE 2 POINTS. Type HELP to show all the commands

LAKE - You can see a lake in one direction. It looks pretty nice.
ROCKS - You can see precarious rocks on the trail in another direction. They look scrambly.
LOOK - Look at the area you are currently in.
ITEMS - Things you can do with stuff you are holding or stuff you see.
HELP - See all the commands you can type
QUIT - Quit the game"
`;

exports[`hiking help 4`] = `
"I guess you don't want to hike any more. See ya!

Looks like you're a winner! Turns: 2 Score: 48
That was fun, Tim!"
`;

exports[`hiking items and drop key and pick up key 1`] = `
"Escaping from the cops station
You've just escaped from a jail. You breathe a sigh of relief because that part of your life is forever behind you. They'll never find you in these woods. Plus, you stole the jail key, because you're not a bad guy. You were put in jail accidentally. They made you steal the key.

Now, all you have to do is hike...

You're surrounded by trees and it's cloudy outside. To be honest, it's a little scary because you really don't know what's out here. And there's cops chasing you, but they're far behind. And you can go super fast.

LAKE - You can see a lake in one direction. It looks pretty nice.
ROCKS - You can see precarious rocks on the trail in another direction. They look scrambly.
LOOK - Look at the area you are currently in.
ITEMS - Things you can do with stuff you are holding or stuff you see.
HELP - See all the commands you can type
QUIT - Quit the game"
`;

exports[`hiking items and drop key and pick up key 2`] = `
"Your hiking adventure begins! Off to the lake we go.

Lake
This lake is beautiful, but the cloudy sky gives it a grim appearance. This seems to be a place of battle.

There are enemies are in the lake. The shores of the lake are too far away from them to do anything about them, though

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking items and drop key and pick up key 3`] = `
"Stuff you are holding:
DROP_JAIL_KEY - Drop the key you stole from the jail.

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking items and drop key and pick up key 4`] = `
"The key has been dropped. You didn't need it anyways.

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking items and drop key and pick up key 5`] = `
"Lake
This lake is beautiful, but the cloudy sky gives it a grim appearance. This seems to be a place of battle.

There are enemies are in the lake. The shores of the lake are too far away from them to do anything about them, though

There is an item here you may be interested in:
Jail Key - The key you stole from the jail. Since you were put into jail accidentally, you had to steal the key because the bad guys made you.
 - TAKE_JAIL_KEY - Pick up the key you stole from the jail.

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking items and drop key and pick up key 6`] = `
"Rocky place
There's rocks here. Be careful! You could trip, or if you horseplay, a rock could fall on your head.

If you are careful, you could cross the rocks to get to a waterfall.

LAKE - Go to the lake
WATERFALL - Check it out, you can see a waterfall beyond the rocks"
`;

exports[`hiking items and drop key and pick up key 7`] = `
"You're a careful sort of person, so you can easily get over the treacherous rocks to go where you want to go.

Lake
This lake is beautiful, but the cloudy sky gives it a grim appearance. This seems to be a place of battle.

There are enemies are in the lake. The shores of the lake are too far away from them to do anything about them, though

There is an item here you may be interested in:
Jail Key - The key you stole from the jail. Since you were put into jail accidentally, you had to steal the key because the bad guys made you.
 - TAKE_JAIL_KEY - Pick up the key you stole from the jail.

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking items and drop key and pick up key 8`] = `
"You now have the key. Again.

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking items and drop key and pick up key 9`] = `
"Rocky place
There's rocks here. Be careful! You could trip, or if you horseplay, a rock could fall on your head.

If you are careful, you could cross the rocks to get to a waterfall.

LAKE - Go to the lake
WATERFALL - Check it out, you can see a waterfall beyond the rocks"
`;

exports[`hiking items and drop key and pick up key 10`] = `
"I guess you don't want to hike any more. See ya!

Looks like you're a winner! Turns: 8 Score: 50
That was fun, Tim!"
`;

exports[`hiking purchase some items at the apple shop 1`] = `
"With the magical strength gained by the waterfall spray, you climb like Spider-Man right up the rope to the giant circle.

Apple Store
This giant, giant circle in the trees at the top of the climbing rope. is an Apple Store. It looks like a shed.  Inside there are many, many shelves full of apples. It looks like there are exactly 100 apples.

There's no one in the store, but there's a man out back. He looks inside and sees you, then he comes in and says a friendly hello.

\\"Oh, a customer! Would you like to buy an apple?\\" he says.

There is an item here you may be interested in:
Apples - 100 red apples.

EXIT - If you want to leave the Apple Store
LOOK - Look at the contents of the Apple Store
BUY_APPLE - If you'd like to own one of these delicious apples."
`;

exports[`hiking purchase some items at the apple shop 2`] = `
"There are exactly 100 apples on the shelves.

Apple Store
This giant, giant circle in the trees at the top of the climbing rope. is an Apple Store. It looks like a shed.  Inside there are many, many shelves full of apples. It looks like there are exactly 100 apples.

There's no one in the store, but there's a man out back. He looks inside and sees you, then he comes in and says a friendly hello.

\\"Oh, a customer! Would you like to buy an apple?\\" he says.

There is an item here you may be interested in:
Apples - 100 red apples.

EXIT - If you want to leave the Apple Store
LOOK - Look at the contents of the Apple Store
BUY_APPLE - If you'd like to own one of these delicious apples."
`;

exports[`hiking purchase some items at the apple shop 3`] = `
"\\"Oh, you'd like to own one of these delicious apples?\\" says the man. \\"Well, you can have one. It costs $1,000.\\"

\\"I have no money!\\" You tell him.

\\"Oh, well, you can still have one apple, for free.\\" he says.

\\"THANKS!\\" you say.

\\"Actually, you can have all of the apples for free.\\" he says.

GAIN 10 POINTS

EXIT - If you want to leave the Apple Store
LOOK - Look at the contents of the Apple Store"
`;

exports[`hiking purchase some items at the apple shop 4`] = `
"\\"Thanks for coming!\\" says the business man. \\"I still have a few items left for sale if you're ever interested!\\"

Really giant waterfall
It is so magical here.

This waterfall is at the bottom of a giant mountain and a bunch of trees. There's a path up the mountain, and you can try to see the top of the mountain, but it's so tall that it hurts your neck to look at it.

There's a climbing rope that leads to a really big circle. You're not sure what it is, and you don't feel strong enough to climb up right now.

There's water spraying everywhere!

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking purchase some items at the apple shop 5`] = `
"You have dodged all the magical spray from the water, and are quite dry. You are not feeling magical.

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking purchase some items at the apple shop 6`] = `
"You jump around in the waterfall spray for a bit. It feels so magical! The magical wetness covers you and leaves you soaked! You feel magically powerful!

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking purchase some items at the apple shop 7`] = `
"With the magical strength gained by the waterfall spray, you climb like Spider-Man right up the rope to the giant circle.

Apple Store
This giant, giant circle in the trees at the top of the climbing rope. is an Apple Store. It looks like a shed.  Inside there are many, many shelves full of apples. It looks like there are exactly 0 apples.

There is an item here you may be interested in:
Apples - 100 red apples.

EXIT - If you want to leave the Apple Store
LOOK - Look at the contents of the Apple Store"
`;

exports[`hiking purchase some items at the apple shop 8`] = `
"There are no apples on the shelves. There is nothing in the store. It is completely empty. Except for some yogurt. But the yogurt has ghosts in it.

Apple Store
This giant, giant circle in the trees at the top of the climbing rope. is an Apple Store. It looks like a shed.  Inside there are many, many shelves full of apples. It looks like there are exactly 0 apples.

There is an item here you may be interested in:
Apples - 100 red apples.

EXIT - If you want to leave the Apple Store
LOOK - Look at the contents of the Apple Store
BUY_YOGURT - Purchase the yogurt with ghosts in it."
`;

exports[`hiking purchase some items at the apple shop 9`] = `
"\\"Oh, you'd like to own this yogurt?\\" says the man. \\"Well, you can have it for free, because it has ghosts in it.\\"

\\"GHOSTS!?\\" You say.

\\"Yes, ghosts.\\" he says.

\\"THANKS FOR THE GHOSTGURT!\\" you say.

\\"By the way, ghosts dislike being on the sun.\\" he says.

GAIN 6 POINTS

EXIT - If you want to leave the Apple Store
LOOK - Look at the contents of the Apple Store"
`;

exports[`hiking purchase some items at the apple shop 10`] = `
"The key has been dropped. You didn't need it anyways.

EXIT - If you want to leave the Apple Store
LOOK - Look at the contents of the Apple Store"
`;

exports[`hiking purchase some items at the apple shop 11`] = `
"The Apple Store is completely empty.

Apple Store
This giant, giant circle in the trees at the top of the climbing rope. is an Apple Store. It looks like a shed.  Inside there are many, many shelves full of apples. It looks like there are exactly 0 apples.

There are 3 items here you may be interested in:
Apples - 100 red apples.,Yogurt - This yogurt is haunted with ghosts. They look like they want to get out.,Jail Key - The key you stole from the jail. Since you were put into jail accidentally, you had to steal the key because the bad guys made you.
 - TAKE_JAIL_KEY - Pick up the key you stole from the jail.

EXIT - If you want to leave the Apple Store
LOOK - Look at the contents of the Apple Store"
`;

exports[`hiking purchase some items at the apple shop 12`] = `
"Really giant waterfall
It is so magical here.

This waterfall is at the bottom of a giant mountain and a bunch of trees. There's a path up the mountain, and you can try to see the top of the mountain, but it's so tall that it hurts your neck to look at it.

There's a climbing rope that leads to a really big circle. You're not sure what it is, and you don't feel strong enough to climb up right now.

There's water spraying everywhere!

ROCKS - Go to the place that has a lot of rocks
MOUNTAIN - Try to climb up the really tall mountain.
ROPE - Try to climb the rope
GET_SPRAYED - Allow yourself to get sprayed by the water
CHECK_DRYNESS - Check yourself to see if you are wet or dry from the waterfall spray"
`;

exports[`hiking score 1`] = `"The average score of the games you plaid are : 53.4"`;

exports[`hiking swim fail 1`] = `
"Escaping from the cops station
You've just escaped from a jail. You breathe a sigh of relief because that part of your life is forever behind you. They'll never find you in these woods. Plus, you stole the jail key, because you're not a bad guy. You were put in jail accidentally. They made you steal the key.

Now, all you have to do is hike...

You're surrounded by trees and it's cloudy outside. To be honest, it's a little scary because you really don't know what's out here. And there's cops chasing you, but they're far behind. And you can go super fast.

LAKE - You can see a lake in one direction. It looks pretty nice.
ROCKS - You can see precarious rocks on the trail in another direction. They look scrambly.
LOOK - Look at the area you are currently in.
ITEMS - Things you can do with stuff you are holding or stuff you see.
HELP - See all the commands you can type
QUIT - Quit the game"
`;

exports[`hiking swim fail 2`] = `
"Your hiking adventure begins! Off to the lake we go.

Lake
This lake is beautiful, but the cloudy sky gives it a grim appearance. This seems to be a place of battle.

There are enemies are in the lake. The shores of the lake are too far away from them to do anything about them, though

ROCKS - Go to a place with a lot of rocks
BRIDGE - A giant bridge looks like it crosses right over the entire lake.
SWIM - Swim around in the lake"
`;

exports[`hiking swim fail 3`] = `
"As soon as you dip one toe in the water, the enemies come up and defeat you!

LOSE 50 points

YOU LOST. You lost too many points!

See ya, Tim! Better luck next time! Turns: 1 Score: 0
That was fun, Tim!"
`;
